--- a/backend/package.json
+++ b/backend/package.json
@@ -6,5 +6,8 @@
     "fastify": "^5.7.2",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.2.3"
   }
 }
